# Mutationpp

./: .gitignore  build.sh  make.sh  mutationpp.bashrc  mutationpp2.bashrc
data/mixtures/: carbonPhenol.xml  carbon_graphite.xml  graphite.xml  tacot_3.0.xml
data/transport/: collisions.xml
examples/c++/: CMakeLists.txt.shared
interface/fortran/: CMakeLists.txt  cwrapper.cpp  cwrapper.h  cwrapper_interface.f90
scripts/: MakeFiles_c++  MakeFiles_fortran
src/: CMakeLists.txt
src/apps/: bprime.cpp  bprime_z.cpp
src/general/: Mixture.cpp  Mixture.h
src/gsi/: CMakeLists.txt  DiffusionVelocityCalculator.cpp  DiffusionVelocityCalculator.h  GSIRateLawGammaCatalytic.cpp  GSIRateLawGammaT2.cpp  GSIRateLawGammaTCata.cpp  GSIRateLawSublimationGamma.cpp  GSIRateLawSublimationKL.cpp  GSIRateManager.h  GSIRateManagerPhenomenological.cpp  GasFourierHeatFluxCalculator.h  (+12 more)
workspace/: CMakeLists.txt  gsi_c++.sh  gsi_fortran  gsi_fortran.sh  input.xml  statemodel.md
workspace/GSI_mutation++/: CMakeLists.txt  gsi.sh  gsi_c++.sh  input.xml
workspace/GSI_mutation++/data/gsi/: carbon_mutationpp_sublimation.xml  carbon_park.xml  carbon_park_sublimation.xml  seb_carbon_ablation.xml  seb_carbon_ablation_catalysis.xml  seb_carbon_sublimation.xml
workspace/GSI_mutation++/data/mixtures/: MXB-360.xml  carbon_park_sublimation.xml  seb_carbon.xml  seb_carbon_ablation.xml  seb_carbon_ablation_catalysis.xml  seb_oxidation_NASA9_ChemNonEq1T.xml
workspace/GSI_mutation++/src/main/: GSI_mutation++.cpp  GSI_mutation++.f90
workspace/GSI_mutation++/src/sub/: input.cpp  input.f90  input.h
(+44 files in other folders)
